@@ -1,3 +1,9 @@
+2007-05-28  Jan Arne Petersen  <jpetersen@jpetersen.org>
+
+	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): set
+	the device property to the correct value before opening the mixer.
+	(closes bug #441552)
+
 2007-05-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* GNOME_SettingsDaemon.server.in: remove file
